--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,7 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/git,java,maven,visualstudiocode,intellij+all,npm,node
+
+.mvn
+mvnw
+mvnw.cmd
