--- a/training-tracker-webapp/pom.xml
+++ b/training-tracker-webapp/pom.xml
@@ -30,6 +30,10 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 
 		<!-- TEST -->
 		<dependency>
