--- a/training-tracker-webapp/pom.xml
+++ b/training-tracker-webapp/pom.xml
@@ -34,6 +34,20 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>de.rottstegge</groupId>
+			<artifactId>training-tracker-sdk-server</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- TEST -->
 		<dependency>
