--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/git,java,maven,visualstudiocode,intellij+all,npm,node
-# Edit at https://www.toptal.com/developers/gitignore?templates=git,java,maven,visualstudiocode,intellij+all,npm,node
+# Created by https://www.toptal.com/developers/gitignore/api/git,java,maven,visualstudiocode,intellij+all,node,yarn,angular
+# Edit at https://www.toptal.com/developers/gitignore?templates=git,java,maven,visualstudiocode,intellij+all,node,yarn,angular
+
+### Angular ###
+## Angular ##
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# IDEs and editors
+.idea/
+
+# misc
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log/
+npm-debug.log
+testem.log
+typings/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -97,7 +128,6 @@ fabric.properties
 # Ignores the whole .idea folder and all .iml files
 # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-.idea/
 
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
@@ -188,7 +218,6 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -266,8 +295,6 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-#!! ERROR: npm is undefined. Use list command to see defined gitignore types !!#
-
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -284,7 +311,23 @@ dist
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/git,java,maven,visualstudiocode,intellij+all,npm,node
+### yarn ###
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+# if you are NOT using Zero-installs, then:
+# comment the following lines
+!.yarn/cache
+
+# and uncomment the following lines
+# .pnp.*
+
+# End of https://www.toptal.com/developers/gitignore/api/git,java,maven,visualstudiocode,intellij+all,node,yarn,angular
 
 .mvn
 mvnw
