--- a/training-tracker-client/package.json
+++ b/training-tracker-client/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
-    "training-tracker-sdk-angular": "file:../training-tracker-sdk-angular/target/generated-sources/dist",
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.5",
     "rxjs": "~6.6.0",
+    "training-tracker-sdk-angular": "file:../training-tracker-sdk-angular/target/generated-sources/dist",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -35,6 +37,44 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.4",
     "typescript": "~4.3.2"
+  },
+  "prettier": {
+    "parser": "typescript",
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "tabWidth": 4,
+    "useTabs": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "semi": true,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "arrowParens": "always",
+    "insertPragma": false,
+    "htmlWhitespaceSensitivity": "ignore",
+    "endOfLine": "lf",
+    "overrides": [
+      {
+        "files": [
+          "*.css",
+          "*.scss"
+        ],
+        "options": {
+          "parser": "css"
+        }
+      },
+      {
+        "files": [
+          "*.html"
+        ],
+        "options": {
+          "parser": "angular",
+          "tabWidth": 2
+        }
+      }
+    ]
   }
 }
