--- a/training-tracker-client/package.json
+++ b/training-tracker-client/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.5",
     "rxjs": "~6.6.0",
