--- a/training-tracker-client/angular.json
+++ b/training-tracker-client/angular.json
@@ -23,6 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [ "chart.js" ],
             "outputPath": "dist/training-tracker-client",
             "index": "src/index.html",
             "main": "src/main.ts",
