--- a/training-tracker-client/package.json
+++ b/training-tracker-client/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "autoprefixer": "^10.3.1",
+    "chart.js": "^3.4.1",
     "postcss": "^8.3.5",
     "rxjs": "~6.6.0",
     "training-tracker-sdk-angular": "file:../training-tracker-sdk-angular/target/generated-sources/dist",
