--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,14 @@
 	</parent>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<modules>
+		<module>training-tracker-gpx</module>
 		<module>training-tracker-sdk-server</module>
 		<module>training-tracker-sdk-angular</module>
 		<module>training-tracker-client</module>
@@ -72,6 +76,17 @@
 				<version>1.4.2.Final</version>
 			</dependency>
 
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-impl</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+
 			<!-- Logging -->
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
@@ -121,6 +136,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>jaxb2-maven-plugin</artifactId>
+					<version>2.5.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
